--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,14 @@
+* {
+    color: red;
+}
+
 body {
     background-color: lightslategrey;
     background-image: url("../images/background-img.jpg");
 }
-
-/* body {
-    background-color: lightslategrey;
-    background-image: url("/assets/images/background-img.jpg");
-} */
+h1 {
+    color: darkgoldenrod;
+}
+h2 {
+    color: rgb(0, 255, 0);
+}
